--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Chat</string>
     <string name="login">Login</string>
+    <string name="usernameoremail">E-mail or username</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="create">Create an account</string>
