Simple websocket communication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="contactalreadyadded">Contact was already added</string>
     <string name="contactsuccessfullyadded">Contact successfully added</string>
     <string name="cannotaddyourself">You cannot add yourself as a contact!</string>
+    <string name="sendmessage">Message</string>
 </resources>
