--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="contactsuccessfullyadded">Contact successfully added</string>
     <string name="cannotaddyourself">You cannot add yourself as a contact!</string>
     <string name="sendmessage">Message</string>
+    <string name="service_name">MessagingService</string>
 </resources>
